<resources>
    <string name="app_name">PopularMoviesStage1</string>
    <string name="menu_item_popular">Most popular</string>
    <string name="menu_item_toprate">Top rated</string>
    <string name="menu_item_favorite">Favorites</string>

    <!-- sort order preferences-->
    <string name="sortOrderTopRated">topRated</string>
    <string name="sortOrderPopular">popular</string>
    <string name="sortOrderFavorite">favorites</string>

    <!--main activity texts -->
    <string name="main_error">An error occurred while loading the page</string>
    <string name="main_loading_error">It seems you do not have an internet connection :(</string>
    <!-- details activity data resources-->

    <string name="favoriteResponse">Added to favourites</string>
    <!--query url for database connection -->
    <string name="baseQueryPopularMovies">https://api.themoviedb.org/3/movie/popular</string>
    <string name="baseQueryTopRatedMovies">https://api.themoviedb.org/3/movie/top_rated</string>
    <string name="configBaseQuery">https://api.themoviedb.org/3/configuration</string>
    <string name="baseQueryMovieDetails">https://api.themoviedb.org/3/movie/</string>
    <string name="queryParamAPIkey">api_key</string>

    <!-- details activity data resources-->
    <string name="baseYoutubeURL">https://www.youtube.com/</string>
    <string name="youtubeQueryParam">watch?v=</string>

    <!-- properties for details activity-->
    <string name="detailView_title">Title</string>
    <string name="detailView_rating">Rating</string>
    <string name="detailView_overview">Summary</string>
    <string name="detailView_releaseDate">Release Date</string>
    <string name="trailerBasicString">Movie Trailer</string>
    <string name="reviewPlaceHolder">There seems to be no review available yet. Maybe write your own</string>
    <string name="alt_image_description">the poster image of the movie is displayed here</string>
</resources>
